--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
     image: postgres:15
     container_name: minimarket_db
     environment:
-      POSTGRES_USER: ferxav_backend
-      POSTGRES_PASSWORD: 123456
+      POSTGRES_USER: tu_usuario
+      POSTGRES_PASSWORD: tu_contraseña
       POSTGRES_DB: minimarket_jk
     ports:
       - "5432:5432"
